--- a/views/app.ejs
+++ b/views/app.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="manifest" href="/manifest.json">
-    <title>PMU</title>
+    <title>Product Scanner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="apple-touch-icon" href="/assets/logo.png">
     <link rel="manifest" href="/manifest.json" />
@@ -168,13 +168,13 @@
   </div>
   <div style="top:0;bottom:0;left:0;right:0;margin:0px;background-color: #F5DBCC;height:100%;width:100%;z-index:1000;position: fixed;" id="load">
       <div id="android" style="display:none;margin:5%;background-color:#fff;position:fixed;bottom:0;left:0;right:0;border-radius: 20px;padding:10px">
-        <h4 style="text-align: center;color:#042744;font-size: 22px;padding-top: 10px;font-weight: 900;"><b>Install PMU Product Scanner</b></h4>
+        <h4 style="text-align: center;color:#042744;font-size: 22px;padding-top: 10px;font-weight: 900;"><b>Install Product Scanner</b></h4>
         <hr>
         <button onclick="handleInstallClick()" style="color:#fff;background-color: #F67327;width:100%;height:60px;border:none;border-radius: 15px;font-size: 26px;">Install</button>
       </div>
 
       <div id="ios" style="display:none;margin:5%;background-color:#fff;position:fixed;bottom:0;left:0;right:0;border-radius: 20px;padding:10px">
-        <h4 style="text-align: center;color:#042744;font-size: 22px;padding-top: 10px;font-weight: 900;"><b>Add PMU Product Scanner</b></h4>
+        <h4 style="text-align: center;color:#042744;font-size: 22px;padding-top: 10px;font-weight: 900;"><b>Add Product Scanner</b></h4>
         <hr>
         <button onclick="handleInstallClick()" style="color:#fff;background-color: #F67327;width:100%;height:60px;border:none;border-radius: 15px;font-size: 26px;">Add</button>
       </div>
