--- a/views/app.ejs
+++ b/views/app.ejs
@@ -251,7 +251,7 @@
                 document.getElementById('qr-reader').style.opacity='0.2';
               }else{
                 document.getElementById('result').innerHTML=`
-					<span style='color:red'>Fake Product!</span><br><br>
+					<span style='color:red'>You are scanning wrong product!</span><br><br>
                   	<img style='display:block !important;width:150px;height:150px;margin:auto' src='/img/sad.jpeg'>
                       <br>
       				<button onclick="complain()" style="height:50px;width:80%;background:red !important;color:#fff;font-size:20px;border:none;border-radius:10px">Complain</button>
